--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="index.css">
         <title>
-          Protfolio
+          Portfolio 
         </title>
         <header>@Welcome to my website</header>
         <h1 class="src">
