--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,7 +5,7 @@
         <title>
           Portfolio 
         </title>
-        <header>@Welcome to my website</header>
+        <header>Welcome to my website</header>
         <h1 class="src">
             <img src="D:\portfolio\images\hi.png" style="width: 5%;">
                 <p style="color: white;">I'm&emsp;Vignesh</p>
